--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
+    - assets/wego.png
+    - assets/wego.svg
+    - assets/gatego.png
+    - assets/gatego.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
