--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   connectivity:
   location_permissions: ^3.0.0
   get: ^3.4.2
-
+  flare_flutter: ^2.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +63,8 @@ flutter:
     - assets/wego.svg
     - assets/gatego.png
     - assets/gatego.svg
+    - assets/pulse.flr
+    - assets/waiting.flr
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
