--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
     - assets/gatego.svg
     - assets/pulse.flr
     - assets/waiting.flr
+    - assets/connect.flr
+    - assets/error.flr
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
