--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,14 +59,17 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    ### IMAGES
     - assets/wego.png
     - assets/wego.svg
     - assets/gatego.png
     - assets/gatego.svg
+    ### ANIMATIONS
     - assets/pulse.flr
     - assets/waiting.flr
     - assets/connect.flr
     - assets/error.flr
+    - assets/success.flr
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
