--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 .flutter-plugins-dependencies
 key.jks
+android/key.properties
