--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flare_flutter: ^2.0.6
   package_info:
   wiredash: ^0.1.0
+  sentry: ">=3.0.0 <4.0.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
