--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  esptouch_flutter: ^0.2.2
-  provider: ^4.3.1
-  connectivity:
-  location_permissions: ^3.0.0
-  get: ^3.4.2
+  esptouch_flutter: ^0.2.4
+  #provider: ^4.3.1
+  connectivity: ^0.4.9+3
+  location_permissions: ^3.0.0+1
+  get: ^3.13.2
   flare_flutter: ^2.0.6
-  package_info:
-  wiredash: ^0.1.0
+  package_info: ^0.4.3
+  wiredash: ^0.3.0
   sentry: ">=3.0.0 <4.0.0"
 
   # The following adds the Cupertino Icons font to your application.
